--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -347,6 +347,36 @@ body {
     transition: 0.2s ease-in;
 }
 
+#galeria {
+    background-color: #031629;
+    color: white;
+    text-align: center;
+    padding: 50px;
+}
+#galeria h2{
+    font-size: 50px;
+}
+
+#galeria .galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.galeria .galeria-card {
+    max-width: 500px;
+    text-align: center;
+}
+
+#galeria .galeria img {
+    width: 100%;
+    border-radius: 8px;
+    margin-bottom: 5px;
+}
+
 @media(max-width: 800px) {
     #menu {
         position: absolute;
