--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -1,11 +1,11 @@
 #planos {
-    min-height: 80vh;
+    min-height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: linear-gradient(90deg, #004067, #006337);
-    padding: 20px;
+    padding: 30px;
 }
 
 #planos div {
@@ -16,6 +16,13 @@
     gap: 10px;
     margin-bottom: 50px;
     color: white;
+    text-align: justify;
+}
+
+#planos div p:last-child {
+    font-size: 30px;
+    margin-top: 10px;
+    text-align: center;
 }
 
 #planos div h2 {
@@ -26,8 +33,6 @@
 
 
 .tabela table {
-    width: 70vw;
-    height: 50vh;
     color: black;
 }
 
@@ -54,7 +59,6 @@
 }
 
 .tabela tbody td:hover img {
-    width: 40px;
     transform: translate(4px, -4px);
 }
 
@@ -87,7 +91,6 @@
     background-color: #133E68;
     padding: 10px 20px;
     color: white;
-    border: 2px solid #133E68;
     border-radius: 8px;
     border: 2px solid black;
     box-shadow: -4px 4px 0px 2px black;
@@ -97,3 +100,4 @@
 .tabela a:hover {
     transform: translate(5px, -5px);
 }
+
