--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,101 +1,101 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    color: inherit;
-    font-family: "Poppins";
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  color: inherit;
+  font-family: "Poppins";
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    overflow-x: hidden;
-    background-color: aliceblue;
+  overflow-x: hidden;
+  background-color: aliceblue;
+  width: 100%;
 }
 
 #cabecalho {
-    background-color: #133E68;
-    min-height: 10vh;
+  background-color: #133e68;
+  min-height: 10vh;
 }
 
 #cabecalho nav {
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 50px;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 50px;
 }
 
 #menu {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 #menu a {
-    display: block;
-    color: white;
-    width: 100px;
-    text-align: center;
-    padding: 10px 0;
-    border: 2px solid white;
-    border-radius: 10px;
-    font-weight: 600;
-    transition: 0.2s ease-in-out;
+  display: block;
+  color: white;
+  width: 100px;
+  text-align: center;
+  padding: 10px 0;
+  border: 2px solid #008b8b;
+  border-radius: 10px;
+  font-weight: 600;
+  transition: 0.2s ease-in-out;
+  background-color: #008b8b;
 }
 
 #menu a:hover {
-    color: black;
-    background-color: white;
+  border: 2px solid white;
 }
 
 #principal {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .nav-list {
-    position: relative;
-    display: flex;
-    flex-direction: row;
+  position: relative;
+  display: flex;
+  flex-direction: row;
 }
 
 .nav-list .menu-button {
-    cursor: pointer;
-    padding: 10px;
+  cursor: pointer;
+  padding: 10px;
 }
 
 .nav-list .menu-button div {
-    height: 3px;
-    width: 25px;
-    background-color: white;
-    position: relative;
-    display: none;
-    transition: 0.2s ease-in;
+  height: 3px;
+  width: 25px;
+  background-color: white;
+  position: relative;
+  display: none;
+  transition: 0.2s ease-in;
 }
 
 .nav-list .menu-button div::before,
 .nav-list .menu-button div::after {
-    content: "";
-    height: 3px;
-    width: 25px;
-    background-color: white;
-    position: absolute;
+  content: "";
+  height: 3px;
+  width: 25px;
+  background-color: white;
+  position: absolute;
 }
 
 .nav-list .menu-button div::before {
-    top: -8px;
-    transition: 0.2s ease-in;
+  top: -8px;
+  transition: 0.2s ease-in;
 }
 
 .nav-list .menu-button div::after {
-    top: 8px;
-    transition: 0.2s ease-in;
+  top: 8px;
+  transition: 0.2s ease-in;
 }
-
