--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,16 +1,16 @@
-
-
 #home {
-    padding: 80px 50px 0px 50px;
+    padding: 160px 50px 0px 50px;
     background-image: url(../img/fundo-aratech-informatica.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    min-height: 90vh;
+    min-height: 100vh;
 }
-#home .home-card{
+
+#home .home-card {
     max-width: 700px;
 }
+
 #home h1 {
     font-size: 50px;
     color: white;
@@ -36,4 +36,9 @@
 #home .seta svg {
     color: white;
     width: 48px;
+    transition: 0.3s ease-in-out;
+}
+
+#home .seta svg:hover {
+    transform: translateY(10px);
 }
