--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -1,7 +1,7 @@
 #contato {
   background: linear-gradient(90deg, #06121f, #052341);
   color: white;
-  padding: 50px;
+  padding: 130px 50px 50px 50px;
   min-height: 100vh;
 }
 
