--- a/assets/css/galeria.css
+++ b/assets/css/galeria.css
@@ -2,7 +2,7 @@
     background: linear-gradient(90deg, #031629, #305375);
     color: white;
     text-align: center;
-    padding: 50px;
+    padding: 130px 50px 50px 50px;
     min-height: 100vh;
 }
 
