--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(90deg, #004067, #006337);
-    padding: 30px;
+    padding: 150px 100px;
 }
 
 #planos div {
@@ -100,4 +100,3 @@
 .tabela a:hover {
     transform: translate(5px, -5px);
 }
-
