--- a/assets/css/rodape.css
+++ b/assets/css/rodape.css
@@ -1,6 +1,6 @@
 #rodape {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: top;
     flex-direction: row;
     padding: 20px;
@@ -8,6 +8,27 @@
     background-color: #133E68;
     color: white;
     gap: 10px;
+    font-size: 12px;
+}
+
+#rodape>div {
+    border-right: 2px solid white;
+    padding: 10px;
+    width: 100%;
+}
+
+#rodape .termos {
+    border: none;
+}
+
+#rodape .termos h5 {
+    display: inline-block;
+    margin-bottom: 10px;
+    transition: 0.3s ease;
+}
+
+#rodape>div:last-child {
+    border: none;
 }
 
 
@@ -18,9 +39,9 @@
 }
 
 .titulo-rodape {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
-    letter-spacing: 10px;
+    margin-bottom: 15px;
 }
 
 .noticias ul li {
@@ -29,7 +50,8 @@
     margin-block: 10px;
 }
 
-.noticias ul li:hover {
+.noticias ul li:hover,
+.termos h5:hover {
     color: rgb(245, 223, 193);
 }
 
@@ -37,26 +59,21 @@
     margin-block: 10px;
 }
 
-.redes-sociais {
-    max-width: 450px;
-}
 
 .redes-sociais img {
     width: 35px;
 }
 
 .redes-sociais ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .redes-sociais a {
     display: flex;
     align-items: center;
-    padding: 10px;
     gap: 8px;
+    padding: 10px;
     color: white;
     transition: 0.3s ease;
     border: 2px solid #133E68;
@@ -68,7 +85,7 @@
 }
 
 .redes-sociais a:hover {
-    background-color: #008b8b;
-    border: 2px solid #008b8b;
+    background-color: #42d1d1;
+    border: 2px solid #42d1d1;
     color: black;
 }
