--- a/assets/css/termos.css
+++ b/assets/css/termos.css
@@ -4,7 +4,7 @@
     max-width: 1000px;
     margin: 0 auto;
     text-align: justify;
-    background-color: rgb(205, 222, 228);
+    background-color: rgba(158, 157, 160, 0.116);
 }
 
 #termos-uso h2 {
