--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(90deg, #004067, #006337);
+    background: linear-gradient(90deg, #000000, #363232);
     padding: 150px 100px;
 }
 
@@ -44,7 +44,7 @@
     border-collapse: collapse;
     text-align: center;
     border: 2px solid black;
-    background-color: rgb(236, 251, 255);
+    background-color: rgb(255, 249, 249);
 }
 
 .tabela th,
@@ -65,7 +65,7 @@
 
 
 .tabela caption {
-    background-color: #133E68;
+    background-color: #000000;
     color: white;
     border-bottom: none;
     padding: 5px;
@@ -74,7 +74,7 @@
 
 .tabela tbody td:nth-child(1),
 .tabela thead th {
-    background-color: #0b619e;
+    background-color: #141313;
     color: white;
     text-transform: uppercase;
     font-weight: bold;
@@ -88,12 +88,12 @@
 
 .tabela a {
     display: block;
-    background-color: #133E68;
+    background-color: #615f5f;
     padding: 10px 20px;
     color: white;
     border-radius: 8px;
-    border: 2px solid black;
-    box-shadow: -4px 4px 0px 2px black;
+    border: 2px solid rgb(0, 0, 0);
+    box-shadow: -4px 4px 0px 2px rgb(0, 0, 0);
     transition: 0.3s ease-in-out;
 }
 
