--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4,7 +4,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        background-color: #0e3257;
+        background-color: #000000;
         width: 200px;
         height: 400px;
         padding-block: 20px;
@@ -18,7 +18,7 @@
     }
 
     #menu.active {
-        transform: translate(-60%, 16%);
+        transform: translate(-60%, 15%);
     }
 
     #cursos .curso {
