--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,7 +22,7 @@ body {
 
 #cabecalho {
   background-color: #000000;
-  min-height: 10vh;
+  height: 10vh;
   position: fixed;
   z-index: 1;
   display: flex;
