--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -16,6 +16,8 @@
     color: white;
     text-align: center;
     line-height: 50px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 
 
@@ -23,7 +25,7 @@
     font-size: 20px;
     margin-block: 20px;
     padding: 40px 20px 40px 50px;
-    background-color: #00000081;
+    background-color: #000000c5;
     color: white;
     font-weight: bold;
     text-align: justify;
